solved another problem calculating height having the box model in mind, also added the specific overflow rules for each axi

--- a/level_3/2/style.css
+++ b/level_3/2/style.css
@@ -15,6 +15,9 @@ footer figure {
     border: 1px solid #c5c9cf;
     padding: 15px;
     width: 88px;
+    height: 88px;
+    overflow-x: hidden;
+    overflow-y: auto; 
 }
 footer figure img {
     border: 5px solid #fff;
